[package]
name = "invariant"
version = "0.1.0"
authors = ["Invariant Labs"]
edition = "2021"

[dependencies]
# local
decimal = { path = "src/decimal" }
traceable_result = { path = "src/traceable_result" }

# ink
ink = { version = "4.2.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
  "derive",
], optional = true }
token = { path = "src/token", default-features = false, features = [
  "ink-as-dependency",
] }

[dev-dependencies]
ink_e2e = "4.3.0"
test_helpers = { path = "src/test_helpers", default-features = false }

[lib]
name = "invariant"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
e2e-tests = []

# comment this out for release build
[profile.release]
overflow-checks = false
