[package]
name = "invariant"
version = "0.1.0"
authors = ["Invariant Labs"]
edition = "2021"

[dependencies]
# local
decimal = { path = "src/decimal" }
traceable_result = { path = "src/traceable_result" }

# ink
ink = { version = "5.0.0", default-features = false }
token = { path = "src/token", default-features = false, features = [
  "ink-as-dependency",
] }
uint = {version = "0.9.5", default-features = false}

[dev-dependencies]
ink_e2e = "5.0.0"
test_helpers = { path = "src/test_helpers", default-features = false }

[lib]
name = "invariant"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["ink/std", "token/std", "uint/std"]
ink-as-dependency = []
e2e-tests = []

# comment this out for release build
[profile.release]
overflow-checks = false
