[package]
name = "math"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
tsify = "0.4.5"

decimal = { path= "../../src/decimal" }
traceable_result = { path = "../../src/traceable_result" }
wasm_wrapper = { path = "./wasm_wrapper"}