[package]
name = "decimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
decimal_core = { path = "decimal_core" }
integer-sqrt = { version = "0.1.5", default-features = false }
uint = { version = "0.9", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0", features = ["derive"] }
ink = { version = "5.0.0", default-features = false }
scale-info = { version = "2.11.3", default-features = false }

[features]
std = []
default = []
invariant-wasm = []
