[package]
name = "math"
version = "0.1.0"
authors = ["Invariant Labs"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
tsify = "0.4.5"
paste = "1.0.14"
js-sys = "0.3.66"


decimal = { path= "../decimal" }
traceable_result = { path = "../traceable_result" }

# ink
ink = { version = "4.2.0", default-features = false, optional = true }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
  "derive",
]}
scale-info = { version = "2.6", default-features = false, features = [
  "derive",
], optional = true }


[features]
# default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"] #
ink-as-dependency = []