[package]
name = "invariant-a0-wasm"
version = "0.1.1"
authors = ["Invariant Labs"]
edition = "2018"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
tsify = "0.4.5"
paste = "1.0.14"
js-sys = "0.3.66"

decimal = { path= "../../../src/decimal", features = ["invariant-wasm"]}
traceable_result = { path = "../../../src/traceable_result" }
wasm_wrapper = { path = "./wasm_wrapper"}
console_error_panic_hook = "0.1.7"
